@@ -1,8 +1,10 @@
 postgresql-common (51) unstable; urgency=low
 
   * PgCommon.pm: Add function read_pg_hba() to parse pg_hba.conf.
+  * Add t/005_PgCommon.t: Designated for testing PgCommon.pm library
+    functions; test read_pg_hba() for now.
 
- -- Martin Pitt <mpitt@debian.org>  Mon,  1 May 2006 12:40:43 +0200
+ -- Martin Pitt <mpitt@debian.org>  Mon,  1 May 2006 12:41:26 +0200
 
 postgresql-common (50) unstable; urgency=low
 
